# SmartBIlliard

./: .gitignore  CMakeLists.txt  Image.qrc  PlayControl.ui  README.md  global_wjl.cpp  global_wjl.h  hikcamera.cpp  hikcamera.h  login.cpp  login.h  login.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  piclabel.cpp  piclabel.h  playcontrol.cpp  playcontrol.h  res.qrc  sqlhelper.cpp  sqlhelper.h  user.cpp  user.h
OCR/src/: args.cpp  main.cpp
